fix footer alignment and remove border-radius

--- a/Home/css/main.css
+++ b/Home/css/main.css
@@ -45,7 +45,7 @@ h1 small
 	padding-top: 20px;
 	padding-bottom: 20px;
 	background-color: rgba(0, 0, 0, .35);
-	border-radius: 5px;
+	border-radius: 0px;
 }
 
 footer
@@ -53,7 +53,7 @@ footer
 	padding-top: 10px;
 	padding-bottom: 5px;
 	background-color: rgba(0, 0, 0, .45);
-	border-radius: 5px;
+	border-radius: 0px;
 }
 
 #navbar > li > a
@@ -67,8 +67,15 @@ footer
     transition:background-color .5s;
 }
 
+footer > div
+{
+	margin-left: 30px !important;
+	padding-left: 0px;
+}
+
 footer p
 {
+	text-align: left;
 	padding-top: 0px;
 	padding-bottom: 0px;
 	margin-bottom: 0px;
